--- a/changes.txt
+++ b/changes.txt
@@ -1,6 +1,6 @@
 ### BROKER
 
- - RWLock is still applied to internal dictionary
+ - RWLock is still applied to internal dictionary, not to representation string
 
 
 ### SERVER-BROKER
